css/svg_style.css
g {
  transition-property: opacity;
  transition-duration: 0.5s;
  transition-timing-function: ease;
}

.subtree {
  opacity: 0;
}
.toggle {
    cursor: pointer;
}

.tooltip {
  display: none;
  opacity: 0;
}
.tooltip:hover {
  opacity: 1;
}
.tooltip:not(.visible) {
  transition-delay: 1s;
}
.visible {
  display:block;
  opacity: 1;
}
.choice {
  cursor: default;
  transition-property: fill;
  transition-duration: 0.5s;
  transition-timing-function: ease;
}
.choice:hover {
  fill: #A6192E
}

.inform {
  cursor: help;
}

